feat(interview): 实现面试系统核心功能和文件管理增强
- 新增 AnswerRequest、CandidateProfileDTO、CreateSessionRequest 等面试相关 DTO
- 新增 InterviewConfigDTO 和 InterviewResponse 完善面试配置和响应结构
- 实现完整的面试会话管理 API 包括创建、开始、暂停、恢复、完成等功能
- 添加提交回答、获取面试结果、导出面试报告等完整面试流程
- 增强文件管理功能支持文件树展示、安全检查和错误处理
- 新增 FileTreeNode DTO 提供文件树节点数据结构
- 实现文件读写安全验证防止路径遍历攻击
- 更新应用端口从 8080 到 8081 避免端口冲突
- 重构文件服务实现更完善的文件操作功能
- 添加教育经历实体映射数据库表结构